# WholeBodyHandover

./: .gitmodules  CMakeLists.txt  README.md  package.xml
cortex/: CMakeLists.txt  clienttest.cpp  cortex.cpp
etc/: Handover.in.conf  display.rviz  handoverLIPMWalking.conf.cmake  mc_rtc.conf
hooks/: applypatch-msg.sample  pre-applypatch.sample  pre-commit.sample  pre-rebase.sample  prepare-commit-msg.sample  update.sample
include/: ApproachObject.h  Trajectories.h  handover_approachObject.h
include/lipm_walking/: Controller.h  Stabilizer.h
simData/: bothHands_1.txt  simData.txt  simData2.txt  simData_1.txt  simData_2.txt  simData_3.txt  simData_4.txt  simData_5.txt
src/: ApproachObject.cpp  CMakeLists.txt  Controller.cpp  FloatingBaseObserver.cpp  ModelPredictiveControl.cpp  Stabilizer.cpp  Trajectories.cpp  handover_approachObject.cpp  handover_approachObject.h  handover_controller.cpp  handover_controller.h  handover_trajectories.cpp  handover_trajectories.h  lib.cpp
src/states/: CMakeLists.txt  DoubleSupport.cpp  Handover.cpp  Handover.h  HandoverState.cpp  HandoverState.h  Initial.cpp  Standing.cpp  StartMocapStep.cpp  StartMocapStep.h
src/states/cortex/: CMakeLists.txt
states/: CMakeLists.txt  StartMocapStep.cpp  StartMocapStep.h  datapath.h.in
